<resources>
    <string name="app_name">StudiaryAT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inicia_sessio">Inicia sessio</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logo">logo</string>
    <string name="he_olvidado_mi_contrase_a">He olvidado mi contraseña</string>
    <string name="reg_strate">Regístrate</string>
    <string name="backgroundlogo">backgroundlogo</string>
    <string name="button">Button</string>
    <string name="nom">Nom</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="confirma_contrase_a">Confirma contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="logo2">logo</string>
    <string name="logoback">logoback</string>
    <string name="data_de_naixement">Data de Naixement</string>
    <string name="correu">Correu</string>
    <string name="enviar_correu">Enviar correu</string>
    <string name="notificacions">Notificacions</string>
    <string name="canvia_el_tema">Canvia el tema</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Notifications</string>
    <string name="title_login" />
    <string name="title_notes" />
    <string name="settings_logo">settings_logo</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="login">Login</string>
    <string name="notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendario">Calendario</string>
    <string name="events">Events:</string>
    <string name="crear_event">Crear event</string>
    <string name="sign_out">Sign out</string>
    <string name="afegir_nota">Afegir nota</string>
    <string name="perfil">Perfil</string>
    <string name="soy_notes_activity">Soy notes activity</string>
    <string name="constrase_a_de_6_deis_caracteres">Constraseña (+ de 6 deis caracteres)</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="marcar_dia">Marcar dia</string>
    <string name="mynotes">MyNotes</string>
    <string name="nueva_nota">Nueva nota</string>
    <string name="mant_n_pulsado_para_eliminar_nota">Mantén pulsado para eliminar nota</string>
    <string name="mant_n_pulsada_una_nota_para_eliminarla">Mantén pulsada una nota para eliminarla</string>
    <string name="floatingbutton">floatingbutton</string>
    <string name="titulo_nota">Titulo nota</string>
    <string name="titulo">Titulo</string>
    <string name="hecho">Hecho</string>
    <string name="textview">TextView</string>
    <string name="e_mail_de_l_usuari">E-MAIL DE L\'USUARI</string>
    <string name="data">Data</string>
    <string name="date">date</string>
    <string name="title">title</string>
    <string name="titulo_de_la_nota">Titulo de la nota</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="numero_de_telefon">NUMERO DE TELEFON</string>
    <string name="nom2">NOM</string>
    <string name="play_button_description">play_button_description</string>
    <string name="add_audio">Add audio</string>
    <string name="grabar_audio">Grabar audio</string>
    <string name="descripci_de_audio">Descripció de audio</string>
    <string name="descripcio_de_audio" />
    <string name="descripcio_de_l_audio">descripcio de l\'audio</string>
    <string name="perfil_1">PERFIL</string>
    <string name="inicia_sessi_n">inicia_sessión</string>
    <string name="notas">NOTAS</string>
    <string name="nombre">Nombre</string>
    <string name="e_mail_del_usuario">E-MAIL DEL USUARIO</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="inicia_sesi_n">INICIA SESIÓN</string>
</resources>