<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE9CFF"
    tools:context="RegisterActivity">

    <ImageView
        android:id="@+id/logoback_reg"
        android:layout_width="127dp"
        android:layout_height="189dp"
        android:contentDescription="@string/logoback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo_reg"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_background" />

    <ImageView
        android:id="@+id/logo_reg"
        android:layout_width="483dp"
        android:layout_height="53dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_register_reg"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:fadingEdge="none"
        android:text="@string/registrarse"
        app:backgroundTint="#8678C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <EditText
        android:id="@+id/textin_name_reg"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ellipsize="none"
        android:fadingEdge="none"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_reg"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/textin_birthday_reg"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/fecha_nacimiento"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_name_reg"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/textin_email_reg"
        android:layout_width="349dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_birthday_reg" />

    <EditText
        android:id="@+id/textin_password_reg"
        android:layout_width="347dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/constrase_a_de_6_deis_caracteres"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_email_reg"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/textin_confpassword_reg"
        android:layout_width="352dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/confirma_contrase_a"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_password_reg"
        app:layout_constraintVertical_bias="0.015" />

</androidx.constraintlayout.widget.ConstraintLayout>