<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE9CFF">

    <ImageView
        android:id="@+id/logo_reg2"
        android:layout_width="483dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/logoback_reg3"
        android:layout_width="157dp"
        android:layout_height="232dp"
        android:contentDescription="@string/logoback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_background" />

    <ImageView
        android:id="@+id/logo_settings"
        android:layout_width="77dp"
        android:layout_height="55dp"
        android:contentDescription="@string/settings_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <CheckBox
        android:id="@+id/checkBox_Notifications_set"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:text="@string/notificacions"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/button_changeback_set"
        android:layout_width="272dp"
        android:layout_height="55dp"
        android:fadingEdge="none"
        android:text="@string/canvia_el_tema"
        app:backgroundTint="#687AE3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />
</androidx.constraintlayout.widget.ConstraintLayout>