<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE9CFF"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context="LoginActivity">

    <ImageView
        android:id="@+id/logoback_log"
        android:layout_width="290dp"
        android:layout_height="530dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/backgroundlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/logo_background" />

    <Button
        android:id="@+id/button_register_log2"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginBottom="120dp"
        android:text="@string/reg_strate"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgotPassw_log2"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/button_forgotPassw_log2"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="@string/he_olvidado_mi_contrase_a"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_log2"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/button_login_log2"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="#3F51B5"
        android:text="@string/inicia_sessio"
        android:textColor="#FFFFFF"
        app:backgroundTint="#687AE3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_password_log2"
        app:layout_constraintVertical_bias="0.085"
        />

    <EditText
        android:id="@+id/textin_password_log2"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/contrase_a"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_username_log2"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/textin_username_log2"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_log2"
        app:layout_constraintVertical_bias="0.052" />

    <ImageView
        android:id="@+id/logo_log2"
        android:layout_width="483dp"
        android:layout_height="53dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="40dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />
</androidx.constraintlayout.widget.ConstraintLayout>