<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AF9EFB">

    <Button
        android:id="@+id/button_register_reg2"
        android:layout_width="322dp"
        android:layout_height="46dp"
        android:text="@string/enviar_correu"
        app:backgroundTint="#1C0A6E"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_dataNaixement_reg"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/textin_email_reg"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/correu"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/textin_dataNaixement_reg"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/data_de_naixement"
        android:inputType="date"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textin_email_reg"
        app:layout_constraintVertical_bias="0.021" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="483dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backgroundlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="156dp"
        android:layout_height="272dp"
        android:contentDescription="@string/backgroundlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        app:srcCompat="@drawable/logo_background" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="141dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>